<resources>
    <string name="app_name">ScoreCounter</string>

    /Buttons
    <string name="basketball">Basketball</string>
    <string name="volleyball">Volleyball</string>
    <string name="ping_pong">Ping-Pong</string>

    /basketball
    <string name="Find_winner">Show the winner</string>
    <string name="reset">Reset</string>
    <string name="Back">Back</string>
    <string name="add_1">ADD 1</string>
    <string name="add_2">ADD 2</string>
    <string name="add_3">ADD 3</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>

    /result
    <string name="show_Draw">Draw</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="partTime">10:00</string>
    <string name="partsPlayed">Parts played: 0</string>
    <string name="score_counter">Score Counter</string>
    <string name="text_0">0</string>
    <string name="winner_window_text">No data downloaded</string>
    <string name="parts_played_no_value">Parts played:</string>
    <string name="time_10">10:00</string>
    <string name="score">Score</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="start">start</string>
</resources>
