<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rsz_basketball"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="start" />

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/partTime"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel" />

            <ToggleButton
                android:id="@+id/togBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/pause"
                android:textOn="@string/resume" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/partsPlayed"
                style="@style/textBask"
                android:text="@string/partsPlayed" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout style="@style/LayoutVer">

                <EditText
                    android:id="@+id/player_1"
                    style="@style/textBask"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionDone"
                    android:text="@string/player_1" />

                <TextView
                    android:id="@+id/score_1"
                    style="@style/textBask"
                    android:text="0" />

                <Button
                    style="@style/button"
                    android:onClick="Count1_1"
                    android:text="@string/add_1" />

                <Button
                    android:id="@+id/player_1_add_2"
                    style="@style/button"
                    android:onClick="Count2_1"
                    android:text="@string/add_2" />

                <Button
                    android:id="@+id/player_1_add_3"
                    style="@style/button"
                    android:onClick="Count3_1"
                    android:text="@string/add_3" />
            </LinearLayout>

            <LinearLayout style="@style/LayoutVer">

                <EditText
                    android:id="@+id/player_2"
                    style="@style/textBask"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionDone"
                    android:text="@string/player_2" />

                <TextView
                    android:id="@+id/score_2"
                    style="@style/textBask"
                    android:text="0" />

                <Button
                    android:id="@+id/player_2_add_1"
                    style="@style/button"
                    android:onClick="Count1_2"
                    android:text="@string/add_1" />

                <Button
                    android:id="@+id/player_2_add_2"
                    style="@style/button"
                    android:onClick="Count2_2"
                    android:text="@string/add_2" />

                <Button
                    android:id="@+id/player_2_add_3"
                    style="@style/button"
                    android:onClick="Count3_2"
                    android:text="@string/add_3" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/LayoutVer2">

            <Button
                android:id="@+id/reset"
                style="@style/button"
                android:text="@string/reset" />

            <Button
                android:id="@+id/back"
                style="@style/button"
                android:text="@string/Back" />

            <TextView
                android:id="@+id/winner"
                style="@style/textBask"
                android:layout_marginTop="40dp" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>