<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@android:color/black"
    android:padding="@dimen/size16Dp"
    android:orientation="vertical"
    tools:context="com.example.android.scorecounter.MainActivity">

    <TextView
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/title"
        android:text="@string/score_counter"/>
    <Button

        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/basketball"
        style="@style/chooseButton"
        android:text="@string/basketball"/>

    <Button
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/volleyball"
        style="@style/chooseButton"
        android:text="@string/volleyball"/>
</LinearLayout>
